Fix text overflow in choices and decorate the answer page

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 	font-size: 2em;
 	color: black;
 	text-shadow: 0 0 10px white;
+	white-space: nowrap;
 }
 
 .fullchoice>a{
@@ -116,15 +117,21 @@
 }
 
 .icon-sign{
-	font-size: 15em;
-}
-
-.icon-red{
-	color: #F82014;
-}
-
-.icon-green{
-	color: #A5EE1E;
+	font-size: 15em;	
+	color: white;
+	/*text-shadow: 6px 6px 0px #F82014;*/
+	text-shadow: 0 1px 0 #ccc, 
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
 
 .strip-red{
